2005-03-14  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/modal4.c (marimbaset): Make zero valid probability for
	multiple strikes

2005-03-14	Istvan Varga	<istvan@csounds.com>
	* SConstruct:
	* Engine/oload.c:
	* H/csound.h:
	* H/csoundCore.h:
	* H/fftlib.h:
	* OOps/fftlib.c:
	  added new FFT code (faster than functions in fft.c)
	  new API functions:
	    csoundComplexFFT(), csoundInverseComplexFFT(),
	    csoundRealFFT(), csoundInverseRealFFT(),
	    csoundRSpectProd()
	  TODO: make allocation of tables safe with reentrant operation and
	        multiple instances (currently uses statics which is ugly)
	* Opcodes/ftconv.c:
	  use new FFT functions; opcode is faster now

2005-03-13	Istvan Varga	<istvan@csounds.com>
	* SConstruct:
	* Opcodes/ftconv.c:
	  new opcode (zero delay multichannel convolve, reads IR from ftable)
	  not fully tested yet
	* Engine/fgens.c:
	  added GEN52: creates interleaved multichannel table from other tables
	* Opcodes/spat3d.c:
	  fixed spat3dt slowdown at end of table
	  made it possible to run spat3dt from the orchestra header (instr 0)

2005-03-13  John ffitch  <jpff@codemist.co.uk>
	* SConstruct (opts): make installation optional

2005-03-13	Istvan Varga	<istvan@csounds.com>
	* Engine/fgens.c:
	* H/ftgen.h:
	  added GEN51
	* Opcodes/reverbsc.c:
	  minor code improvements

2005-03-13  John ffitch  <jpff@codemist.co.uk>
	* Opcodes/ftest.c (gentune): Added Gabriel's gen to the loadable
	gens under the name gentune

2005-03-12	Istvan Varga	<istvan@csounds.com>
	* SConstruct:
	* Opcodes/screverb.c:
	  new opcode (Sean Costello's waveguide reverb)

2005-03-11	Istvan Varga	<istvan@csounds.com>
	* InOut/widgets.cpp:
	* Top/csound.c:
	* Top/pvanal.c:
	  fixed calls of csoundYield() with NULL pointer
	* Engine/entry1.c:
	  fixed rtclock opcode (should be 0xffff, not 0xfffd)

2005-03-10	Istvan Varga	<istvan@csounds.com>
	* Engine/entry2.c:
	  run miditempo opcode both at init and performance time
	* Engine/musmon.c: